src/objects/Lease_date__c.object
<CustomObject>
    <fields>
        <fullName>Break_Date_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Break Date N/A?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Break_Date__c</fullName>
        <label>Break Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Break_Description__c</fullName>
        <label>Break Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Break_Notification__c</fullName>
        <label>Internal Break Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Break_Notification_to_Landlord_Date__c</fullName>
        <label>Break Notification to Landlord Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Termination_Date__c</fullName>
        <description>Lease Termination Date</description>
        <label>Lease Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Lease Dates</relationshipLabel>
        <relationshipName>Lease_Dates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Review_Date_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rent Review Date N/A?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Rent Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Description__c</fullName>
        <label>Review Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Notification__c</fullName>
        <label>Rent Review Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Notification__c</fullName>
        <description>Termination Notification</description>
        <label>Termination Notification</label>
        <type>Date</type>
    </fields>
    <label>Lease Date</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Lease date ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>